manifests/broken/svc-wrong-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-broken
  namespace: default
spec:
  selector:
    app: demo-v2
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
